feat: add forgot-password page

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -6,8 +6,6 @@
         title="lampada vermelha fazendo papel de letra no logotipo">
     </div>
     <input type="email" placeholder="E-mail">
-    <input type="password" placeholder="Senha">
-    <button>Entrar</button>
-    <p class="forgot_password">Esqueceu sua senha? <a routerLink="/forgot-password">Clique aqui</a></p>
+    <button type="submit">Entrar</button>
   </form>
 </div>
