--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -11,6 +11,6 @@
     <input type="email" placeholder="E-mail">
     <input type="password" placeholder="Senha">
     <button type="submit">Entrar</button>
-    <p class="forgot_password">Já tem uma conta? <a href="login.html">Entrar</a></p>
+    <p class="forgot_password">Já tem uma conta? <a routerLink="/login">Entrar</a></p>
   </form>
 </div>
