--- a/src/app/pages/user/auth/login/login.component.html
+++ b/src/app/pages/user/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <form>
     <div class="logo">
       <p>CineLumin</p>
-      <img src="../../assets/icons/light.png" alt="lampada vermelha fazendo papel de letra no logotipo"
+      <img src="../../../../assets/icons/light.png" alt="lampada vermelha fazendo papel de letra no logotipo"
         title="lampada vermelha fazendo papel de letra no logotipo">
     </div>
     <input type="email" placeholder="E-mail">
