--- a/src/app/pages/user/home-page/home-page.component.html
+++ b/src/app/pages/user/home-page/home-page.component.html
@@ -1,1 +1,13 @@
-<p>home-page works!</p>
+<app-navbar></app-navbar>
+
+<div class="container">
+  <app-movie-row rowTitle="EM CARTAZ" address="#"></app-movie-row>
+</div>
+<div class="container">
+  <app-movie-row rowTitle="ESTREIAS" address="#"></app-movie-row>
+</div>
+<div class="container">
+  <app-movie-row rowTitle="EM BREVE" address="#"></app-movie-row>
+</div>
+
+<app-footer></app-footer>
