--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'normalize.css/normalize.css';
+@import "normalize.css/normalize.css";
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* Inter */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 *,
 *::before,
@@ -13,22 +13,26 @@
 
 :root {
   --white: #ffffff;
-  --principal_red: #E31919;
-  --second_red: #EE525B;
+  --principal_red: #e31919;
+  --second_red: #ee525b;
   --second_red_opacity: #ff555e;
-  --wine: #9E373B;
-  --bg_admin: #2E2E2E;
+  --wine: #9e373b;
+  --bg_admin: #2e2e2e;
   --bg_sidebar: #202020;
   --bg_session_item: #424242;
   --background: rgba(0, 0, 0, 0.7);
   --background_overlay: rgba(0, 0, 0, 0.4);
-  --green: #00CC52;
-  --deselected_chair: #D9D9D9;
+  --green: #00cc52;
+  --deselected_chair: #d9d9d9;
   /* placeholder */
-  --grey: #8C8C8C;
+  --grey: #8c8c8c;
   --bg_input: #333333;
 }
 
+html {
+  background-color: #252525;
+}
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
