--- a/src/app/pages/user/home-page/home-page.component.html
+++ b/src/app/pages/user/home-page/home-page.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 
+<app-banner-slider></app-banner-slider>
 <div class="container">
   <app-movie-row rowTitle="EM CARTAZ" address="#"></app-movie-row>
 </div>
