--- a/src/app/pages/user/movie-page/movie-page.component.html
+++ b/src/app/pages/user/movie-page/movie-page.component.html
@@ -17,7 +17,7 @@
   </div>
   <div ng-hide="youtubeUrl == null" class="content">
     <h4>Assista ao trailer</h4>
-    <iframe width="100%" height="760" src="https://www.youtube.com/embed/{{ youtubeUrl }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="100%" height="760" [src]="'https://www.youtube.com/embed/' + youtubeUrl | safe : 'resourceUrl'" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="content">
     <h4>Créditos e distribuição</h4>
