--- a/src/app/components/session-item/session-item.component.html
+++ b/src/app/components/session-item/session-item.component.html
@@ -1,4 +1,4 @@
-<a class="session_item" href="session_item.html">
+<div class="session_item" (click)="redirectToSpecifySession()">
   <div class="icon_container">
     <div class="border_icon">
       <img src="../../assets/icons/movie_item.png" alt="icon de um filme" title="filme item">
@@ -8,4 +8,4 @@
     <p class="title">{{ session?.title }}</p>
     <p class="room">{{ session?.room }}</p>
   </div>
-</a>
+</div>
