--- a/src/app/pages/admin/specify-session/specify-session.component.css
+++ b/src/app/pages/admin/specify-session/specify-session.component.css
@@ -22,16 +22,6 @@
   gap: 3px;
 }
 
-.container main .header #btn_open_aside {
-  border: none;
-  background: transparent;
-  width: 45px;
-  height: 45px;
-  margin-top: 1px;
-  cursor: pointer;
-  display: none;
-}
-
 .container main .header h2 {
   color: var(--white);
   font-size: 30px;
@@ -41,70 +31,10 @@
 
 /* SESSIONS ROW */
 .container .info_card_row {
-  margin-top: 30px;
-  display: flex;
+  margin-top: 15px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-}
-
-/* INFO CARD ITEM */
-.container .info_card_row .info_card_item {
-  width: 100%;
-  border-radius: 5px;
-  display: flex;
-  gap: 10px;
-  background-color: var(--bg_session_item);
-  padding: 20px;
-  transition: all .1s ease;
-  text-decoration: none;
-}
-
-/* SESSIONS ICON */
-.container .info_card_row .info_card_item .icon_container {
-  width: 50px;
-  height: 50px;
-  background-color: var(--second_red);
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.container .info_card_row .info_card_item .icon_container .border_icon {
-  width: 30px;
-  height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid var(--wine);
-  border-radius: 50%;
-}
-
-.container .info_card_row .info_card_item .icon_container img {
-  width: 14px;
-  height: 14px;
-}
-
-/* SESSIONS CONTENT */
-.container .info_card_row .info_card_item .session_content {
-  display: flex;
-  flex-direction: column;
-  align-items: self-start;
-  justify-content: center;
-  font-family: 'Inter', sans-serif;
-}
-
-.container .info_card_row .info_card_item .session_content .title {
-  color: var(--white);
-  opacity: 0.9;
-  font-weight: 500;
-  font-size: 17px;
-}
-
-.container .info_card_row .info_card_item .session_content .subtitle {
-  color: var(--white);
-  opacity: 0.6;
-  font-weight: 400;
-  font-size: 15px;
 }
 
 /* ROOM */
@@ -244,7 +174,8 @@
 
   /* SESSIONS ROW */
   .container .info_card_row {
-    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
   }
 }
 
