--- a/src/app/pages/admin/specify-session/specify-session.component.html
+++ b/src/app/pages/admin/specify-session/specify-session.component.html
@@ -27,146 +27,10 @@
           <p>a</p>
         </div>
         <div class="chairs_row">
-          <div class="chairs">
-            <!-- i -->
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <!-- h -->
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <!-- g -->
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <!-- f -->
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <!-- e -->
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <!-- d -->
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <!-- c -->
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <!-- b -->
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <!-- a -->
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-          </div>
-          <div class="chairs">
-            <!-- i -->
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <!-- h -->
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <!-- g -->
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="selected"></button>
-            <button class="selected"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <!-- f -->
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <!-- e -->
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <!-- d -->
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <!-- c -->
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <!-- b -->
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <button class="deselected"></button>
-            <!-- a -->
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-            <button class="unavailabel"></button>
-            <button class="deselected"></button>
-          </div>
-          <div class="chairs">
-            <!-- i -->
-            <button type="button" class="unavailabel"></button>
-            <button type="button" class="unavailabel"></button>
-            <!-- h -->
-            <button type="button" class="unavailabel"></button>
-            <button type="button" class="deselected"></button>
-            <!-- g -->
-            <button type="button" class="unavailabel"></button>
-            <button type="button" class="deselected"></button>
-            <!-- f -->
-            <button type="button" class="unavailabel"></button>
-            <button type="button" class="deselected"></button>
-            <!-- e -->
-            <button type="button" class="unavailabel"></button>
-            <button type="button" class="unavailabel"></button>
-            <!-- d -->
-            <button type="button" class="deselected"></button>
-            <button type="button" class="deselected"></button>
-            <!-- c -->
-            <button type="button" class="unavailabel"></button>
-            <button type="button" class="deselected"></button>
-            <!-- b -->
-            <button type="button" class="deselected"></button>
-            <button type="button" class="deselected"></button>
-            <!-- a -->
-            <button type="button" class="deselected"></button>
-            <button type="button" class="deselected"></button>
+          <div class="chairs" *ngFor="let chair_row_item of chair_row">
+            <li *ngFor="let chair of chair_row_item.chairs">
+              <button [className]="chair.type"></button>
+            </li>
           </div>
         </div>
       </div>
