--- a/src/app/pages/user/movie-page/movie-page.component.html
+++ b/src/app/pages/user/movie-page/movie-page.component.html
@@ -3,7 +3,7 @@
 <div class="spacing">
   <div class="content">
     <h3>{{ title }}</h3>
-    <img ng-show="banner != null" class="movie-banner" src="{{ banner }}" alt="Movie banner" />
+    <img *ngIf="banner !== undefined" class="movie-banner" src="{{ banner }}" alt="Movie banner" />
   </div>
   <div class="content">
     <h4>Leia a sinopse</h4>
@@ -15,7 +15,7 @@
       </tr>
     </table>
   </div>
-  <div ng-hide="youtubeUrl == null" class="content">
+  <div *ngIf="youtubeUrl !== undefined" class="content">
     <h4>Assista ao trailer</h4>
     <iframe width="100%" height="760" [src]="'https://www.youtube.com/embed/' + youtubeUrl | safe : 'resourceUrl'" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
