feat: show all movies on movies page

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@
   --deselected_chair: #d9d9d9;
   /* placeholder */
   --grey: #8c8c8c;
-  --bg_input: #333333;
+  --bg_input: #3e3e3e;
 }
 
 html {
