--- a/src/app/pages/admin/movies/movies.component.css
+++ b/src/app/pages/admin/movies/movies.component.css
@@ -152,3 +152,15 @@
 .hidden {
   display: none;
 }
+
+@media(max-width: 700px) {
+  .container main .data {
+    overflow-x: scroll;
+  }
+
+  .container main .data table {
+    min-width: 700px;
+    max-width: 700px;
+    width: 700px;
+  }
+}
