--- a/src/app/pages/admin/movie-create/movie-create.component.html
+++ b/src/app/pages/admin/movie-create/movie-create.component.html
@@ -29,7 +29,16 @@
       <div class="flex">
         <div class="input_group">
           <label for="classification">Classificação indicativa</label>
-          <input type="text" placeholder="16" id="classification">
+          <div class="select_group">
+            <select id="classification">
+              <option value="free">Livre</option>
+              <option value="10">10</option>
+              <option value="12">12</option>
+              <option value="12">16</option>
+              <option value="12">18</option>
+            </select>
+            <img src="../../../../assets/icons/arrow_down.png" alt="seta para baixo branca" title="seta para baixo">
+          </div>
         </div>
         <div class="input_group">
           <label for="gender">Gênero</label>
@@ -43,7 +52,16 @@
         </div>
         <div class="input_group">
           <label for="gender">Adicionar filme em</label>
-          <input type="text" placeholder="Cartaz" id="gender">
+          <div class="select_group">
+            <select id="classification">
+              <option value="banner">Cartaz</option>
+              <option value="10">10</option>
+              <option value="12">12</option>
+              <option value="12">16</option>
+              <option value="12">18</option>
+            </select>
+            <img src="../../../../assets/icons/arrow_down.png" alt="seta para baixo branca" title="seta para baixo">
+          </div>
         </div>
       </div>
       <div class="input_group">
