--- a/src/app/components/aside-nav/aside-nav.component.html
+++ b/src/app/components/aside-nav/aside-nav.component.html
@@ -11,23 +11,23 @@
     <div class="flex">
       <nav>
         <ul>
-          <a href="#">
+          <a routerLink="/admin">
             <img src="../../../assets/icons/house.png" alt="icone de casa" title="casa">
             <li>Início</li>
           </a>
-          <a href="sessions.html" class="active">
+          <a class="active" routerLink="/admin/sessions">
             <img src="../../../assets/icons/calendar.png" alt="icone de casa" title="casa">
             <li>Sessões</li>
           </a>
-          <a href="#">
+          <a routerLink="/admin/movies">
             <img src="../../../assets/icons/movie.png" alt="icone de casa" title="casa">
             <li>Filmes</li>
           </a>
-          <a href="#">
+          <a>
             <img src="../../../assets/icons/cart.png" alt="icone de casa" title="casa">
             <li>Produtos</li>
           </a>
-          <a href="login_admin.html">
+          <a>
             <img src="../../../assets/icons/arrow_left.png" alt="icone de casa" title="casa">
             <li>Sair</li>
           </a>
