--- a/src/app/pages/admin/movies/movies.component.html
+++ b/src/app/pages/admin/movies/movies.component.html
@@ -6,7 +6,7 @@
         <app-btn-open-aside (openedAside)="handleOpenAside()"></app-btn-open-aside>
         <h2>Filmes</h2>
       </div>
-      <button type="button">
+      <button type="button" routerLink="/admin/movie/create">
         Adicionar filme
       </button>
     </div>
