feat: add dialog in confirm delete movie

--- a/src/app/pages/admin/movie-create/movie-create.component.html
+++ b/src/app/pages/admin/movie-create/movie-create.component.html
@@ -69,7 +69,7 @@
         <textarea placeholder="Cartaz" id="description"></textarea>
       </div>
       <div class="actions">
-        <button type="button">Cancelar</button>
+        <button type="button" routerLink="/admin/movies">Cancelar</button>
         <button type="submit">Adiconar filme</button>
       </div>
     </form>
