--- a/src/app/pages/admin/movies/movies.component.html
+++ b/src/app/pages/admin/movies/movies.component.html
@@ -35,7 +35,8 @@
               <mat-icon [ngStyle]="{'color': 'var(--green)'}">edit</mat-icon>
             </button>
             <button type="button">
-              <mat-icon [ngStyle]="{'color': 'var(--principal_red)'}">restore_from_trash</mat-icon>
+              <mat-icon [ngStyle]="{'color': 'var(--principal_red)'}"
+                (click)="openDialog(movie.id)">restore_from_trash</mat-icon>
             </button>
           </td>
         </tr>
