--- a/src/app/pages/user/auth/login/login.component.html
+++ b/src/app/pages/user/auth/login/login.component.html
@@ -2,12 +2,11 @@
   <form>
     <div class="logo">
       <p>CineLumin</p>
-      <img src="../../../../assets/icons/light.png" alt="lampada vermelha fazendo papel de letra no logotipo"
-        title="lampada vermelha fazendo papel de letra no logotipo">
+      <img src="../../../../assets/icons/light.png" alt="lampada vermelha fazendo papel de letra no logotipo" title="lampada vermelha fazendo papel de letra no logotipo" />
     </div>
-    <input type="email" placeholder="E-mail">
-    <input type="password" placeholder="Senha">
+    <input type="email" placeholder="E-mail" />
+    <input type="password" placeholder="Senha" />
     <button>Entrar</button>
-    <p class="forgot_password">Esqueceu sua senha? <a routerLink="/forgot-password">Clique aqui</a></p>
+    <p class="forgot_password">Não tem conta? <a href="/register">Crie uma</a></p>
   </form>
 </div>
