--- a/src/app/pages/admin/movie-create/movie-create.component.html
+++ b/src/app/pages/admin/movie-create/movie-create.component.html
@@ -44,6 +44,10 @@
           <label for="gender">Gênero</label>
           <input type="text" placeholder="Ex: Comédia, Drama" id="gender" name="genero" />
         </div>
+        <div class="input_group">
+          <label for="duracao">Duração</label>
+          <input type="text" placeholder="Ex: 00:00" id="duracao" name="duracao" [(ngModel)]="filme.duracao" />
+        </div>
       </div>
       <div class="flex">
         <div class="input_group">
